------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Fri Jul 09 16:10 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated romfs to use byteorder functions

Fri Jul 09 15:45 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Tweaks to bioshd driver to fix problems with disabling hd
	  support. Fix to Changelog times.

Wed Jul 07 19:17 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated build system to make it more arch independant. Makefile
	  contributed by Simon Wood.

Tue Jul 06 19:17 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added byteorder functions for romfs.

Tue Jul 06 14:23 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* More changes to the rd driver by Blaz Antonic.

Mon Jul 05 14:11 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Sanitisation and enhancement of the rd driver by Blaz Antonic.

Thu Jun 24 14:11 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Bug fix to bioscon driver.

Tue Jun 15 10:40 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Latest changes to (ALPHA) meta driver.

Tue Jun 15 10:31 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Minor tweaks to Makefile

Sun May 30 00:05 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixes code to allow loading of shared libraries.

Sun May 30 00:05 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Modified tty interface to simplify it.

	* Added support for non-blocking IO on ttys.

	* Included support for graphics on direct console driver.

	* Updated serial termios support to allow baud rate to be changed.

	* Added support for ^C and ^Z to generate signals from the console.

	* Minor tweaks to select code.

	* Added socket to syscall table.
